objects/Account_Service_Territory__c.object
<CustomObject>
    <description>BETA</description>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>Account_Service_Territory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Territory Metadata</label>
    <nameField>
        <displayFormat>AST-{0000000}</displayFormat>
        <label>Account Service Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Service Territory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>